database configuration completed and downloaded sql package

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UserDataDbContext": "Server=localhost;Port=5432;Database=UserData;UserId=postgres;Password=postgres;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
